In the middle of a big ol refactoroo